--- a/nevernote-core/src/main/resources/static/index.html
+++ b/nevernote-core/src/main/resources/static/index.html
@@ -23,15 +23,16 @@
           <img />
         </div>
         <div class="span4">
-          <p>
+          <div>
             <h1>Nevernote</h1>
-            <img />
-          </p>
+            <img src="img/nervernote_logo.png" class="img-rounded">
+          </div>
           <p>
             <h1><small>Never forget your notes</small></h1>
           </p>
         </div>
       </div>
+    </div>
   </header>  
   <section class="container">
     <div class=row>
