--- a/nevernote-core/src/main/resources/static/index.html
+++ b/nevernote-core/src/main/resources/static/index.html
@@ -73,14 +73,14 @@
     <div>
         <script type="text/html" id="taskline_tmpl">
             <tr>
-                <td class="{{cl}}">{{title}}</t>
-                <td class="{{cl}}">{{content}}</t>
+                <td class="{{doneclass}}">{{title}}</t>
+                <td class="{{doneclass}}">{{content}}</t>
                 <td>
-                    <button data-id="{{id}}" class="btn btn-success donetask"><i class="icon-ok"></i></button>
+                    <button data-id="{{id}}" class="btn {{btndoneclass}} donetask"><i class="{{doneicon}} icon-white"></i></button>
                     &nbsp;
-                    <button data-id="{{id}}" class="btn btn-primary edittask"><i class="icon-edit"></i></button>
+                    <button data-id="{{id}}" class="btn btn-primary edittask"><i class="icon-edit icon-white"></i></button>
                     &nbsp;
-                    <button data-id="{{id}}" class="btn btn-danger deletetask"><i class="icon-trash"></i></button>
+                    <button data-id="{{id}}" class="btn btn-danger deletetask"><i class="icon-trash icon-white"></i></button>
                 </td>                 
             </tr>
         </script>
@@ -136,12 +136,24 @@
             $('#tasks').empty()
             $.get('/notes', function(data) {
                 data.note.forEach(function(elem, array, idx) {
-                    var cl = ""
-                    console.log(elem.done)
+                    var doneclass = ''
+                    var btndoneclass = 'btn-inverse'
+                    var doneicon = 'icon-ok'
                     if (elem.done == "true") {
-                        cl = "done-true"
+                        doneclass = 'done-true'
+                        btndoneclass = 'btn-success'
+                        doneicon = 'icon-ban-circle'
                     }
-                    $('#tasks').append(render("#taskline_tmpl", {title: elem.title, content: elem.content, id: elem.id, cl: cl}))
+                    $('#tasks').append(render("#taskline_tmpl", 
+                        {
+                            title: elem.title, 
+                            content: elem.content, 
+                            id: elem.id, 
+                            doneclass: doneclass,
+                            btndoneclass: btndoneclass,
+                            doneicon: doneicon
+                        })
+                    )
                 })
             })
         }
