--- a/nevernote-core/src/main/resources/static/index.html
+++ b/nevernote-core/src/main/resources/static/index.html
@@ -1,181 +1,163 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>Nevernote : never forget your notes</title>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-    <script src="js/jquery-1.8.2.min.js"></script>
-    <script src="js/mustache.js"></script>
-    <script src="js/underscore.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <style type="text/css">
-        .done-true {
-            text-decoration: line-through;        
-        }
-    </style>
-</head>
-<body>
-  <header class="container">
-    <div class="page-header">
-      <div class="row">
-        <div class="span8">
-          <img />
-        </div>
-        <div class="span4">
-          <div>
-            <h1>Nevernote</h1>
-            <img src="img/nervernote_logo.png" class="img-rounded">
-          </div>
-          <p>
-            <h1><small>Never forget your notes</small></h1>
-          </p>
-        </div>
-      </div>
-    </div>
-  </header>  
-  <section class="container">
-    <div class=row>
-      <div id="showFastNewNote">
-        <div class="controls form-inline span9 offset4">
-            <form class="form-inline">
-            <label>Fast note</label>
-            <input id="fastNoteTitle" type="text" placeholder="Title">
-            <div class="input-append">
-            <input id="fastNoteContent" type="text" placeholder="Content">
-            <button type="button" id="submitFastNoteButton" class="btn"><i class="icon-ok"></i></button>
-            <a href="#" class="btn"><i class="icon-plus"></i></a>
-            <a href="settings.html" id="showSettingsButton" class="btn btn-primary"><i class="icon-wrench icon-white"></i></a>
-            </div>
-            </form>  
-        </div>
-      </div>
-      <div id="showNewNote">
-        <form class="span4 offset4">
-          <div class="control-group">
-            <label class="control-label" for="fastNoteText">Add note: </label>
-            <div class="controls">
-              <div class="input-append">
-                <input id="fastNoteText" type="text">
-                <button type="button" class="btn"><i class="icon-ok"></i></button>
-                <button type="button" id="hideNewNoteButton" class="btn"><i class="icon-plus"></i></button>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-  </section>  
-  <section class="container">
-    <div>
-        <script type="text/html" id="taskline_tmpl">
-            <tr>
-                <td class="{{doneclass}}">{{title}}</t>
-                <td class="{{doneclass}}">{{content}}</t>
-                <td>
-                    <button data-id="{{id}}" class="btn {{btndoneclass}} donetask"><i class="{{doneicon}} icon-white"></i></button>
-                    &nbsp;
-                    <button data-id="{{id}}" class="btn btn-primary edittask"><i class="icon-edit icon-white"></i></button>
-                    &nbsp;
-                    <button data-id="{{id}}" class="btn btn-danger deletetask"><i class="icon-trash icon-white"></i></button>
-                </td>                 
-            </tr>
-        </script>
-        <table class="table table-striped table-condensed">
-            <thead>
-                <tr>
-                    <th width="40%">Title</th>
-                    <th width="40%">Content</th>
-                    <th width="20%">Actions</th>
-                </tr>
-            </thead>
-            <tbody id="tasks">
-            </tbody>
-        </table>
-    </div>
-  </section> 
-  <hr/>
-  <footer class="footer">
-    <p class="offset3">
-      Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu Clochard</a>
-    </p>
-  </footer>
-  
-  <script>
-    function render(templateId, view) {
-        return Mustache.render( $(templateId).html(), view )
-    }
-    $(document).ready(function() {
-        var addFastNote = function(event) {
-            event.preventDefault();
-            var title = $("#fastNoteTitle").val()
-            var content = $("#fastNoteContent").val()
-            $.ajax({url:'/notes', type: 'put', data:{title: title, content: content}, complete:function(data) {
-                $("#fastNoteTitle").val("")
-                $("#fastNoteContent").val("")
-                updateTasks()
-            }})
-        }
-        function appendTask(elem) {
-            var doneclass = ''
-            var btndoneclass = 'btn-inverse'
-            var doneicon = 'icon-ok'
-            if (elem.done == "true") {
-                doneclass = 'done-true'
-                btndoneclass = 'btn-success'
-                doneicon = 'icon-ban-circle'
+    <head>
+        <meta charset="utf-8" />
+        <title>Nevernote : never forget your notes</title>
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+        <script src="js/jquery-1.8.2.min.js"></script>
+        <script src="js/mustache.js"></script>
+        <script src="js/underscore.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <style type="text/css">
+            .done-true {
+                text-decoration: line-through;        
             }
-            $('#tasks').append(render("#taskline_tmpl", 
-                {
-                    title: elem.title, 
-                    content: elem.content, 
-                    id: elem.id, 
-                    doneclass: doneclass,
-                    btndoneclass: btndoneclass,
-                    doneicon: doneicon
-                })
-            ) 
-        }
-        function updateTasks() {
-            $('#tasks').empty()
-            $.get('/notes', function(data) {
-                if (data != null && data.note != null && data.note != undefined) {
-                    if (data.note instanceof Array) {
-                        data.note.forEach(function(elem, array, idx) {
-                            appendTask(elem)
-                        })
-                    } else {
-                        appendTask(data.note)
+            html, body {
+                background-color: #fff;
+            }
+            body {
+                padding-top: 60px;
+            }
+            .container > footer p {
+                text-align: center; 
+            }
+        </style>
+    </head>
+    <body>    
+        <div class="container">
+            <div class="navbar navbar-fixed-top navbar-inverse">
+                <div class="navbar-inner">
+                    <div class="container">
+                        <a href="/static/" class="brand">Nevernote</a>
+                        <ul class="nav">
+                            <li><a href="edit.html"><i class="icon-plus icon-white"></i> Add a new note</a></li>
+                            <li><a href="settings.html"><i class="icon-wrench icon-white"></i> Plugin settings</a></li>
+                            <li><a href="#">&nbsp;&nbsp;&nbsp;Fast note &nbsp;</a></li>
+                            <li>
+                                <form class="navbar-form form-inline pull-right">
+                                    <input id="fastNoteTitle" type="text" class="span2" placeholder="Title">
+                                    <div class="input-append">
+                                        <input id="fastNoteContent" type="text" class="span2" placeholder="Content">
+                                        <button type="button" id="submitFastNoteButton" class="btn"><i class="icon-ok"></i></button>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul> 
+                    </div>
+                </div>
+            </div>  
+            <section class="container">
+                <div>
+                    <script type="text/html" id="taskline_tmpl">
+                        <tr>
+                            <td class="{{doneclass}}">{{title}}</t>
+                            <td class="{{doneclass}}">{{content}}</t>
+                            <td>
+                                <button data-id="{{id}}" class="btn {{btndoneclass}} donetask"><i class="{{doneicon}} icon-white"></i></button>
+                                &nbsp;
+                                <button data-id="{{id}}" class="btn btn-primary edittask"><i class="icon-edit icon-white"></i></button>
+                                &nbsp;
+                                <button data-id="{{id}}" class="btn btn-danger deletetask"><i class="icon-trash icon-white"></i></button>
+                            </td>                 
+                        </tr>
+                        </script>
+                        <table class="table table-striped table-condensed">
+                            <thead>
+                                <tr>
+                                    <th width="40%">Title</th>
+                                    <th width="40%">Content</th>
+                                    <th width="20%">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tasks">
+                            </tbody>
+                        </table>
+                    </div>
+                </section> 
+                <hr/>
+                <footer>
+                    <p>
+                        Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu Clochard</a>
+                    </p>
+                </footer>
+            </div>
+        <script>
+            function render(templateId, view) {
+                return Mustache.render( $(templateId).html(), view )
+            }
+            $(document).ready(function() {
+                var addFastNote = function(event) {
+                    event.preventDefault();
+                    var title = $("#fastNoteTitle").val()
+                    var content = $("#fastNoteContent").val()
+                    if (title != "") {
+                        $.ajax({url:'/notes', type: 'put', data:{title: title, content: content}, complete:function(data) {
+                            $("#fastNoteTitle").val("")
+                            $("#fastNoteContent").val("")
+                            updateTasks()
+                        }})
                     }
-                } else {
-                   $('#tasks').append("<tr><td>No task available ...</td><td></td><td></td></tr>") 
                 }
-            })
-        }
-        $("#submitFastNoteButton").click(addFastNote)
-        $("#showNewNote").hide()
-        updateTasks()
-        $(".donetask").live('click', function(e) {
-          console.log("done")
-          e.preventDefault()
-          var id = $(this).data('id')
-          $.post('/notes/done/' + id, function(data) {
-              updateTasks()
-          })        }) 
-        $(".edittask").live('click', function(e) {
-          console.log("edit")
-          e.preventDefault()
-          var id = $(this).data('id')
-        }) 
-        $(".deletetask").live('click', function(e) {
-          console.log("delete")
-          e.preventDefault()
-          var id = $(this).data('id')
-          $.ajax({url:'/notes/' + id, type:'delete', complete: function(data) {
-               updateTasks()
-          }})
-        }) 
-    });    
-  </script>
-</body>
+                function appendTask(elem) {
+                    var doneclass = ''
+                    var btndoneclass = 'btn-inverse'
+                    var doneicon = 'icon-ok'
+                    if (elem.done == "true") {
+                        doneclass = 'done-true'
+                        btndoneclass = 'btn-success'
+                        doneicon = 'icon-ban-circle'
+                    }
+                    $('#tasks').append(render("#taskline_tmpl", 
+                    {
+                        title: elem.title, 
+                        content: elem.content, 
+                        id: elem.id, 
+                        doneclass: doneclass,
+                        btndoneclass: btndoneclass,
+                        doneicon: doneicon
+                    })
+                ) 
+                }
+                function updateTasks() {
+                    $('#tasks').empty()
+                    $.get('/notes', function(data) {
+                        if (data != null && data.note != null && data.note != undefined) {
+                            if (data.note instanceof Array) {
+                                data.note.forEach(function(elem, array, idx) {
+                                    appendTask(elem)
+                                })
+                            } else {
+                                appendTask(data.note)
+                            }
+                        } else {
+                            $('#tasks').append("<tr><td>No task available ...</td><td></td><td></td></tr>") 
+                        }
+                    })
+                }
+                $("#submitFastNoteButton").click(addFastNote)
+                updateTasks()
+                $(".donetask").live('click', function(e) {
+                    console.log("done")
+                    e.preventDefault()
+                    var id = $(this).data('id')
+                    $.post('/notes/done/' + id, function(data) {
+                        updateTasks()
+                    })        }) 
+                $(".edittask").live('click', function(e) {
+                    console.log("edit")
+                    e.preventDefault()
+                    var id = $(this).data('id')
+                }) 
+                $(".deletetask").live('click', function(e) {
+                    console.log("delete")
+                    e.preventDefault()
+                    var id = $(this).data('id')
+                    $.ajax({url:'/notes/' + id, type:'delete', complete: function(data) {
+                            updateTasks()
+                        }})
+                }) 
+            });    
+        </script>
+    </body>
 </html>
