--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -53,20 +53,17 @@
         </div>
     </header>
     <section class="container">
-        <div class="span6 offset3">
+        <div>
             <script type="text/html" id="pluginline_tmpl">
                 <tr class="{{stateClass}}">
                     <td>{{pluginName}}</td>
                     <td>
-                        <button data-id="{{pluginName}}{{BtnState}}" class="btn {{btnStateClass}}"><i
-                                class="{{btnStateIcon}} icon-white"></i></button>
+                        <button data-id="{{pluginName}}BtnState" class="btn {{btnStateClass}} btn-state"><i class="{{btnStateIcon}} icon-white"></i></button>
                         &nbsp;
-                        <button data-id="{{pluginName}}{{BtnRefresh}}" class="btn btn-primary {{btnRefreshClass}}"><i
-                                class="icon-refresh icon-white"></i>
+                        <button data-id="{{pluginName}}BtnRefresh" class="btn btn-primary btn-refresh {{btnRefreshClass}}"><i class="icon-refresh icon-white"></i>
                         </button>
                         &nbsp;
-                        <button data-id="{{pluginName}}{{BtnRefresh}}" class="btn btn-danger"><i
-                                class="icon-trash icon-white"></i>
+                        <button data-id="{{pluginName}}BtnTrash" class="btn btn-danger btn-trash"><i class="icon-trash icon-white"></i>
                         </button>
                     </td>
                 </tr>
@@ -75,7 +72,7 @@
                 <tr class="info">
                     <td>Add a plugin</td>
                     <td>
-                        <button type="button" class="btn btn-primary"><i class="icon-folder-open"></i></button>
+                        <button type="button" class="btn btn-primary"><i class="icon-folder-open icon-white"></i></button>
                     </td>
                 </tr>
             </script>
@@ -120,13 +117,12 @@
                         stateClass:stateClass,
                         btnStateClass:btnStateClass,
                         btnStateIcon:btnStateIcon,
-                        btnRefreshClass:btnStateIcon
+                        btnRefreshClass:btnRefreshClass
                     }))
         }
         function updatePlugins() {
             $('#plugins').empty()
             $.get('/plugins/installed', function (data) {
-                console.log("tOTO1")
                 if (data != null && data != null && data != undefined) {
                     data.forEach(function (name, array, idx) {
                         var elem = "{\"name\":\"" + name + "\",\"active\":\"false\"}"
@@ -134,20 +130,32 @@
                     })
                 }
                 $.get('/plugins/active', function (data) {
-                    console.log("tOTO2")
                     if (data != null && data != null && data != undefined) {
                         data.forEach(function (name, array, idx) {
                             var elem = "{\"name\":\"" + name + "\",\"active\":\"true\"}"
                             appendPlugin(elem)
                         })
                     }
-                    console.log("tOTO3")
                     $('#plugins').append(render("#pluginfooter_tmpl",{}))
-                    console.log("tOTO4")
                 })
             })
         }
         updatePlugins()
+        $(".btn-state").live('click', function (e) {
+            e.preventDefault()
+            var name = $(this).data('id').substr(0,$(this).data('id').length - 8)
+            console.log(name)
+        })
+        $(".btn-refresh").live('click', function (e) {
+            e.preventDefault()
+            var name = $(this).data('id').substr(0,$(this).data('id').length - 10)
+            console.log(name)
+        })
+        $(".btn-trash").live('click', function (e) {
+            e.preventDefault()
+            var name = $(this).data('id').substr(0,$(this).data('id').length - 8)
+            console.log(name)
+        })
     });
 </script>
 </body>
