Make footer sticky

--- a/nevernote-core/src/main/resources/static/index.html
+++ b/nevernote-core/src/main/resources/static/index.html
@@ -83,12 +83,10 @@
         </div>
     </section>
     <hr/>
-    <footer>
-        <p>
-            Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu
-            Clochard</a>
-        </p>
-    </footer>
+<footer class="navbar navbar-fixed-bottom" style="text-align: center">
+      Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu
+      Clochard</a>
+</footer>
 </div>
 <script>
     function render(templateId, view) {
