--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -89,11 +89,9 @@
         </div>
     </section>
 </div>
-<footer class="container">
-    <p class="pull-right">
-        Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu
-        Clochard</a>
-    </p>
+<footer class="navbar navbar-fixed-bottom" style="text-align: center">
+      Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu
+      Clochard</a>
 </footer>
 <script>
     function render(templateId, view) {
