--- a/nevernote-core/src/main/resources/static/index.html
+++ b/nevernote-core/src/main/resources/static/index.html
@@ -83,7 +83,7 @@
         </div>
     </section>
     <hr/>
-<footer class="navbar navbar-fixed-bottom" style="text-align: center">
+<footer style="text-align: center">
       Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu
       Clochard</a>
 </footer>
