--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -86,7 +86,7 @@
         </div>
     </section>
 </div>
-<footer class="navbar navbar-fixed-bottom" style="text-align: center">
+<footer style="text-align: center">
       Made with <a>Weld-OSGi framework</a> for <a>Devoxx 2012</a> presentation by <a>Mathieu Ancelin</a> & <a>Matthieu
       Clochard</a>
 </footer>
