--- a/nevernote-core/src/main/resources/static/upload.html
+++ b/nevernote-core/src/main/resources/static/upload.html
@@ -3,7 +3,7 @@
 <body>
 	<h1>File Upload</h1>
  
-	<form action="/bundle/upload" method="post" enctype="multipart/form-data">
+	<form action="/upload" method="post" enctype="multipart/form-data">
  
 	   <p>
 		Select a file : <input type="file" name="file" size="45" />
