--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -72,7 +72,7 @@
                     <td>Browse to add a new plugin bundle</td>
                     <td></td>
                     <td>
-                        <button type="button" class="btn btn-primary"><i class="icon-folder-open icon-white"></i></button>
+                        <button type="button" id="showupload" class="btn btn-primary"><i class="icon-folder-open icon-white"></i></button>
                     </td>
                     <td></td>
                 </tr>
@@ -89,6 +89,14 @@
                 <tbody id="plugins">
                 </tbody>
             </table>
+            <div id="uploadsection" class="hide">
+                <form action="/upload" method="post" enctype="multipart/form-data">
+                    <p>
+                        <input type="file" name="file" size="45">
+                    </p>
+                    <input class="btn" type="submit" value="Install It" />
+                </form>
+            </div>
         </div>
     </section>
 </div>
@@ -187,6 +195,11 @@
             $.get('/plugins/' + bundleId + '/remove', function (data) {
               updatePlugins()
             })
+        })
+        $('#showupload').live('click', function(e) {
+            e.preventDefault()
+            console.log("click")
+            $('#uploadsection').show()
         })
     });
 </script>
