--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -174,7 +174,7 @@
                 })
             })
         }
-        setInterval(updatePlugins(), 1000)
+        setInterval(updatePlugins, 1000)
         $(".btn-state").live('click', function (e) {
             e.preventDefault()
             var bundleId = $(this).data('id')
