Add Bing Translator

--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -180,6 +180,7 @@
                 })
             })
         }
+        updatePlugins()
         setInterval(updatePlugins, 1000)
         $(".btn-state").live('click', function (e) {
             e.preventDefault()
