Revert view changes for devoxx presentation

--- a/nevernote-core/src/main/resources/static/index.html
+++ b/nevernote-core/src/main/resources/static/index.html
@@ -18,9 +18,9 @@
             background-color: #fff;
         }
 
-        /*body {*/
-            /*padding-top: 60px;*/
-        /*}*/
+        body {
+            padding-top: 60px;
+        }
 
         .container > footer p {
             text-align: center;
@@ -36,18 +36,18 @@
                 <ul class="nav">
                     <li><a href="edit.html"><i class="icon-plus icon-white"></i> Add a new note</a></li>
                     <li><a href="settings.html"><i class="icon-wrench icon-white"></i> Plugin settings</a></li>
-                    <!--<li><a href="#">&nbsp;&nbsp;&nbsp;Fast note &nbsp;</a></li>-->
-                    <!--<li>-->
-                        <!--<form class="navbar-form form-inline pull-right">-->
-                            <!--<input id="fastNoteTitle" type="text" class="span2" placeholder="Title">-->
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;Fast note &nbsp;</a></li>
+                    <li>
+                        <form class="navbar-form form-inline pull-right">
+                            <input id="fastNoteTitle" type="text" class="span2" placeholder="Title">
 
-                            <!--<div class="input-append">-->
-                                <!--<input id="fastNoteContent" type="text" class="span2" placeholder="Content">-->
-                                <!--<button type="button" id="submitFastNoteButton" class="btn"><i class="icon-ok"></i>-->
-                                <!--</button>-->
-                            <!--</div>-->
-                        <!--</form>-->
-                    <!--</li>-->
+                            <div class="input-append">
+                                <input id="fastNoteContent" type="text" class="span2" placeholder="Content">
+                                <button type="button" id="submitFastNoteButton" class="btn"><i class="icon-ok"></i>
+                                </button>
+                            </div>
+                        </form>
+                    </li>
                 </ul>
             </div>
         </div>
